--- a/src/main/webapp/styles/mainCSS.css
+++ b/src/main/webapp/styles/mainCSS.css
@@ -7,7 +7,7 @@ body {
     margin-right: 20%;
     border-radius: 5px;
     border: 0;
-    padding: 10px 10px 10px 10px;
+    padding: 3%;
     font-family: "Comic Sans MS", fantasy;
     box-shadow: 0 0 5px 2px;
 }
